--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.8</version>
+                <configuration>
+                    <excludes>
+                        <exclude>br/com/ada/currencyapi/domain/**/*</exclude>
+                        <exclude>br/com/ada/currencyapi/exception/*</exclude>
+                        <exclude>br/com/ada/currencyapi/CurrencyApiApplication.class</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -86,38 +93,50 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>verify</phase>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>post-unit-test</id>
-                        <phase>test</phase>
+                        <id>jacoco-check</id>
                         <goals>
-                            <goal>report</goal>
+                            <goal>check</goal>
                         </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <minimum>1</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <excludes>
-                        <exclude>br/com/ada/domain/*</exclude>
-                        <exclude>br/com/ada/exception/*</exclude>
-                        <exclude>br/com/ada/CurrencyApiApplication.class</exclude>
-                    </excludes>
-                    <rules>
-                        <rule>
-                            <element>BUNDLE</element>
-                            <limits>
-                                <limit>
-                                    <counter>LINE</counter>
-                                    <value>COVEREDRATIO</value>
-                                    <minimum>1</minimum>
-                                </limit>
-                            </limits>
-                        </rule>
-                    </rules>
-                </configuration>
+                <!--                <configuration>-->
+                <!--                    <excludes>-->
+                <!--                        <exclude>br/com/ada/domain/*</exclude>-->
+                <!--                        <exclude>br/com/ada/exception/*</exclude>-->
+                <!--                        <exclude>br/com/ada/CurrencyApiApplication.class</exclude>-->
+                <!--                    </excludes>-->
+                <!--                    <rules>-->
+                <!--                        <rule>-->
+                <!--                            <element>BUNDLE</element>-->
+                <!--                            <limits>-->
+                <!--                                <limit>-->
+                <!--                                    <counter>LINE</counter>-->
+                <!--                                    <value>COVEREDRATIO</value>-->
+                <!--                                    <minimum>1</minimum>-->
+                <!--                                </limit>-->
+                <!--                            </limits>-->
+                <!--                        </rule>-->
+                <!--                    </rules>-->
+                <!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
